# pytemplate

./: .gitignore  christi.py  main.py  poetry.lock.ansible  poetry.lock.datascience  pyproject.toml  pyproject.toml.ansible  pyproject.toml.datascience
.devcontainer/: .bashrc  .post.sh  Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml
docs/: .debug.yml  .markdownlint.json  Gemfile  Makefile  README.md  _config.yml  index.md
docs/.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
docs/_layouts/: default.liquid
docs/contribution/: index.md  mark-down.md  metadata.md
docs/my-new-folder/: index.md
docs/my-new-folder-2/: file-1.md  index.md
docs/my-new-folder/sub-folder-1/: index.md
docs/my-new-folder/sub-folder-2/: index.md
docs/my-new-folder/sub-folder-3/: file-2.md  hldtd.md  index.md
