[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pat McLean <github@psmware.ie>"]
license = "AGPL3-only"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.8.6"
cryptography = "3.3.2"


[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
isort = "^5.8.0"
autopep8 = "^1.5.6"
black = "^20.8b1"
flake8 = "^3.9.0"
pylint = "^2.7.4"
pytest-mock = "^3.5.1"
rope = "^0.18.0"
cffi = "^1.14.5"
scp = "^0.13.3"
six = "^1.15.0"
mypy = "^0.812"
pytest = "^6.2.2"
uWSGI = "^2.0.19"
pep8 = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"